--- a/src/components/utils/utils.css
+++ b/src/components/utils/utils.css
@@ -6,7 +6,7 @@
     color: white;
     text-align: left;
     z-index: 50;
-    overflow: scroll;
+    overflow-y: scroll;
     max-height: 50dvh;
 }
 
