--- a/src/styles/weaponStats.css
+++ b/src/styles/weaponStats.css
@@ -1,6 +1,6 @@
 .weapon-stats {
 	text-align: center;
-	padding: 3% 0;
+	padding-bottom: 3%;
 	background-color: #BFBCAB;
 	font-size: 15px;
 	display: flex;
